--- a/TextStyle/MainPage.xaml
+++ b/TextStyle/MainPage.xaml
@@ -5,11 +5,11 @@
 
     <ScrollView>
         <StackLayout>
-            <Label Text="Stylowanie Elementu" BackgroundColor="#558B2F" FontSize="40" Padding="20"/>
+            <Label Text="Stylowanie elementu" BackgroundColor="#558B2F" FontSize="40" Padding="20"/>
             <VerticalStackLayout Margin="40" Padding="20">
-                <Label Text="Rozmiar:" FontSize="20" x:Name="sliderLabel"/>
-                <Slider Minimum="1" Maximum="100" x:Name="slider" ValueChanged="OnSliderValueChanged"/>
-                <Picker Title="Pozycja tekstu" x:Name="textAlignmentPicker" FontSize="20">
+                <Label Text="Rozmiar:" x:Name="sliderLabel" FontSize="18"/>
+                <Slider Minimum="1" Maximum="48" x:Name="slider" ValueChanged="OnSliderValueChanged" Margin="0, 0, 0, 18"/>
+                <Picker Title="Pozycja tekstu" x:Name="textAlignmentPicker" FontSize="18" Margin="0, 0, 0, 18">
                     <Picker.Items>
                         <x:String >End</x:String>
                         <x:String>Center</x:String>
@@ -17,13 +17,13 @@
                     </Picker.Items>
                 </Picker>
 
-                <Label Text="Pogrubiony tekst?" FontSize="20"/>
+                <Label Text="Pogrubiony tekst?" FontSize="18"/>
 
-                <Switch IsToggled="false" HorizontalOptions="End" x:Name="boldSwitch"/>
-                <Label Text="Pochylony tekst?" FontSize="20"/>
+                <Switch IsToggled="false" HorizontalOptions="End" x:Name="boldSwitch" Margin="0, 0, 0, 18"/>
+                <Label Text="Pochylony tekst?" FontSize="18"/>
 
-                <Switch IsToggled="false" HorizontalOptions="End" x:Name="italicSwitch"/>
-                <Button Text="Zatwierdź ustawienia" BackgroundColor="#558B2F" Clicked="OnClick"/>
+                <Switch IsToggled="false" HorizontalOptions="End" x:Name="italicSwitch" Margin="0, 0, 0, 18"/>
+                <Button Text="Zatwierdź ustawienia" BackgroundColor="#558B2F" Clicked="OnClick" TextColor="White" FontAttributes="Bold"/>
                 <VerticalStackLayout Padding="20">
                     <BoxView HeightRequest="1" BackgroundColor="#558B2F" />
                 </VerticalStackLayout>
